--- a/style.scss
+++ b/style.scss
@@ -10,32 +10,115 @@
 
 .heart::before {
     content:'';
-    width:5px;
-    height:5px;
+    width:10px;
+    height:10px;
     position: absolute;
     background-color: red;
     border-radius: 50%;
-    left:0px;
-    top:-9.5px;
+    left:-1px;
+    top:-18.5px;
 }
 .heart{
     width:0;
     height:0;
     position: relative;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 6px solid red;
-    left:-5px;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+    border-top: 12px solid red;
+    left:5px;
     top: 100px;
 
 }
 .heart::after{
     content:'';
-    width:5px;
-    height: 5px;
+    width:10px;
+    height:10px;
     position: absolute;
     background-color: red;
     border-radius: 50%;
-    left:-5px;
-    top:-9.5px;
+    left:-9px;
+    top:-18.5px;
+}
+.egg{
+    position: absolute;
+    top:150px;
+    border-radius: 50%;
+    height:10px;
+    width:17px;
+    border:1px solid black;
+}
+.diamond::before{
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-left: 25px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 15px solid black;
+    top:10px;
+    left:-24.5px;
+    transform: rotate(270deg);
+}
+
+.diamond{
+    top:200px;
+    position: absolute;
+    width: 25px;
+    height: 35px;
+    background-color: black;
+    left:50px;
+}
+
+.diamond::after{
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 25px solid transparent;
+    border-bottom: 15px solid black;
+    top:10px;
+    left:14.5px;
+    transform: rotate(90deg);
+    
+}
+
+.star::before{
+    position: absolute;
+    content:'';
+    height:0;
+    width: 0;
+    border-right:20px solid transparent;
+    border-left: 20px solid transparent;
+    border-bottom:15px solid black;
+    transform: rotate(304deg);
+    left:-14px;
+    top:-3px;
+}
+
+.star{
+    position: absolute;
+    width: 0;
+    height: 0;
+    top:300px;
+    height:0;
+    width: 0;
+    border-right:30px solid transparent;
+    border-left: 30px solid transparent;
+    border-bottom:15px solid black;
+    transform:rotate(180deg);
+    left:80px;
+}
+
+.star::after{
+    position: absolute;
+    content:'';
+    height:0;
+    width: 0;
+    border-right:20px solid transparent;
+    border-left: 20px solid transparent;
+    border-bottom:15px solid black;
+    left:-25px;
+    top:-3px;
+    transform: rotate(53deg);
 }
